--- a/HTML&CSS/Done/Flexbox/index.html
+++ b/HTML&CSS/Done/Flexbox/index.html
@@ -9,13 +9,13 @@
 		<script src="main.js"></script>
 		<style>
 			.container {
-				height: 100vh;
-				background-color: red;
-				width: 100%;
 				display: flex;
 				flex-direction: column;
-				justify-content: center;
+				justify-content: space-around;
 				align-items: center;
+				background-color: rgb(0, 255, 136);
+				width: 100%;
+				height: 100vh;
 			}
 		</style>
 	</head>
@@ -26,71 +26,7 @@
 				src="https://media.licdn.com/dms/image/C510BAQH4iKCyQozIEA/company-logo_200_200/0/1519880618051?e=2147483647&v=beta&t=sCNW9_V51LRvr36cnQgspIH6EPCsVv_MN0J8HF_thhM"
 				alt=""
 				height="100px"
-				width="100px"
-			/>
-			<h5 class="smallText">Small Text</h5>
-
-			<h1 class="head">Aroha Technologies</h1>
-			<img
-				src="https://media.licdn.com/dms/image/C510BAQH4iKCyQozIEA/company-logo_200_200/0/1519880618051?e=2147483647&v=beta&t=sCNW9_V51LRvr36cnQgspIH6EPCsVv_MN0J8HF_thhM"
-				alt=""
-				height="100px"
-				width="100px"
-			/>
-			<h5 class="smallText">Small Text</h5>
-
-			<h1 class="head">Aroha Technologies</h1>
-			<img
-				src="https://media.licdn.com/dms/image/C510BAQH4iKCyQozIEA/company-logo_200_200/0/1519880618051?e=2147483647&v=beta&t=sCNW9_V51LRvr36cnQgspIH6EPCsVv_MN0J8HF_thhM"
-				alt=""
-				height="100px"
-				width="100px"
-			/>
-			<h5 class="smallText">Small Text</h5>
-
-			<h1 class="head">Aroha Technologies</h1>
-			<img
-				src="https://media.licdn.com/dms/image/C510BAQH4iKCyQozIEA/company-logo_200_200/0/1519880618051?e=2147483647&v=beta&t=sCNW9_V51LRvr36cnQgspIH6EPCsVv_MN0J8HF_thhM"
-				alt=""
-				height="100px"
-				width="100px"
-			/>
-			<h5 class="smallText">Small Text</h5>
-
-			<h1 class="head">Aroha Technologies</h1>
-			<img
-				src="https://media.licdn.com/dms/image/C510BAQH4iKCyQozIEA/company-logo_200_200/0/1519880618051?e=2147483647&v=beta&t=sCNW9_V51LRvr36cnQgspIH6EPCsVv_MN0J8HF_thhM"
-				alt=""
-				height="100px"
-				width="100px"
-			/>
-			<h5 class="smallText">Small Text</h5>
-
-			<h1 class="head">Aroha Technologies</h1>
-			<img
-				src="https://media.licdn.com/dms/image/C510BAQH4iKCyQozIEA/company-logo_200_200/0/1519880618051?e=2147483647&v=beta&t=sCNW9_V51LRvr36cnQgspIH6EPCsVv_MN0J8HF_thhM"
-				alt=""
-				height="100px"
-				width="100px"
-			/>
-			<h5 class="smallText">Small Text</h5>
-
-			<h1 class="head">Aroha Technologies</h1>
-			<img
-				src="https://media.licdn.com/dms/image/C510BAQH4iKCyQozIEA/company-logo_200_200/0/1519880618051?e=2147483647&v=beta&t=sCNW9_V51LRvr36cnQgspIH6EPCsVv_MN0J8HF_thhM"
-				alt=""
-				height="100px"
-				width="100px"
-			/>
-			<h5 class="smallText">Small Text</h5>
-
-			<h1 class="head">Aroha Technologies</h1>
-			<img
-				src="https://media.licdn.com/dms/image/C510BAQH4iKCyQozIEA/company-logo_200_200/0/1519880618051?e=2147483647&v=beta&t=sCNW9_V51LRvr36cnQgspIH6EPCsVv_MN0J8HF_thhM"
-				alt=""
-				height="100px"
-				width="100px"
-			/>
+				width="100px" />
 			<h5 class="smallText">Small Text</h5>
 		</div>
 	</body>
