--- a/JavaScript/EventListeners/main.html
+++ b/JavaScript/EventListeners/main.html
@@ -14,7 +14,7 @@
 	<body>
 		<div
 			style="min-height: 100vh"
-			class="container-fluid bg-black d-flex align-items-center justify-content-center">
+			class="container-fluid bg-black d-flex flex-column align-items-center justify-content-center">
 			<form class="form-section p-2 w-50" id="form">
 				<div class="d-flex flex-column form-group mb-3 px-4">
 					<label class="text-white fw-bold" for="name"> Name </label>
@@ -93,10 +93,10 @@
 				</div>
 			</form>
 			<div id="answers" class="p-5">
-				<p id="name-answer"></p>
-				<p id="hobbies-answer"></p>
-				<p id="age-answer"></p>
-				<p id="gender"></p>
+				<p id="nameAnswer"></p>
+				<p id="hobbiesAnswer"></p>
+				<p id="ageAnswer"></p>
+				<p id="genderAnswer"></p>
 			</div>
 		</div>
 		<script src="./main.js"></script>
